# tree-sitter-plc

./: .gitignore  Cargo.toml  Makefile  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-plc.h  tree-sitter-plc.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_plc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  parser.c
test/corpus/: example.txt
