[package]
name = "tree-sitter-plc"
description = "Tree-sitter grammar for PLC (IEC 61131-3)"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "plc", "iec61131-3"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Anooshiravan/tree-sitter-plc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
